<resources>
    <string name="app_name">FitToPrint</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!--Navigation Drawer items-->

    <string name="navigation_drawer_header_your_news">Your News</string>

    <string name="action_notification_settings">Notification Settings</string>
    <string name="navigation_drawer_search">Search for topics</string>
    <string name="navigation_drawer_trending">Trending</string>
    <string name="navigation_drawer_followed">Followed Topics</string>
    <string name="navigation_drawer_more_topics">More Topics</string>
    <string name="navigation_drawer_business">Business</string>
    <string name="navigation_drawer_entertainment">Entertainment</string>
    <string name="navigation_drawer_health">Health</string>
    <string name="navigation_drawer_politics">Politics</string>
    <string name="navigation_drawer_scienceandtech">Science/Tech</string>
    <string name="navigation_drawer_sports">Sports</string>
    <string name="card_view_follow">Follow</string>
    <string name="navigation_drawer_US">US</string>
    <string name="navigation_drawer_world">World</string>


    <!--Toolbar Name items-->

    <string name="toolbar_name_trending">Trending</string>
    <string name="toolbar_name_followed">Followed Topics</string>
    <string name="toolbar_name_business">Business</string>
    <string name="toolbar_name_entertainment">Entertainment</string>
    <string name="toolbar_name_health">Health</string>
    <string name="toolbar_name_politics">Politics</string>
    <string name="toolbar_name_scienceandtech">Science/Tech</string>
    <string name="toolbar_name_sports">Sports</string>
    <string name="toolbar_name_us">US</string>
    <string name="toolbar_name_world">World</string>

    <!--BING API Key-->

    <string name="API_KEY">0840b3a5e0374dfc9a1dbdcb89b66f40</string>

    <!--Other Toolbar Names-->

    <string name="toolbar_name_trending_news">Trending News</string>
    <string name="toolbar_name_searched_results">Search Results</string>

    <!--For Facebook sharing-->

    <string name="facebook_app_id">1757738834448963</string>

    <!--Toast message strings-->

    <string name="toast_message_no_connectivity">Please connect to the internet via wifi\n
        or mobile data to view yournews!</string>

    <string name="toast_searched_for">Searched for</string>

    <!--Daily Morning Notification Text-->

    <string name="notification_morning_title">Rise and shine!</string>
    <string name="notification_morning_text">Start your day by reading this morning\'s news</string>

    <!--Daily Morning Notification Text-->

    <string name="rv_time_ago">%1$ hrs ago</string>




</resources>
